@@ -57,7 +57,8 @@ version 0.21
 With Test::PDL, you can compare two ndarrays for equality. The comparison is
 performed as thoroughly as possible, comparing types, dimensions, bad value
 patterns, and finally the values themselves. The exact behaviour can be
-configured by setting certain options (see set_options() and %OPTIONS below).
+configured by setting certain package-wide defaults (see %DEFAULTS below), or
+by supplying options in a function call.
 Test::PDL is mostly useful in test scripts.
 
 Test::PDL is to be used with the Perl Data Language (L<PDL>).
@@ -69,22 +70,21 @@ with C<test_>: test_short(), test_double(), ...
 
 =head1 VARIABLES
 
-=head2 %OPTIONS
+=head2 %DEFAULTS
 
-The comparison criteria used by Test::PDL can be configured by setting the
-values in the %OPTIONS hash. This can be done directly, by addressing
-%Test::PDL::OPTIONS directly. However, it is preferred that set_options() is
-used instead.
+The default comparison criteria used by Test::PDL can be configured by setting
+the values in the %DEFAULTS hash. This can be done directly, by addressing
+%Test::PDL::DEFAULTS directly.
 
 =over 4
 
-=item TOLERANCE
+=item atol
 
 The tolerance used to compare floating-point values. Initially set to 1e-6.
 This is currently an absolute tolerance, meaning that two values compare equal
 if the absolute value of their difference is below the tolerance.
 
-=item EQUAL_TYPES
+=item require_equal_types
 
 If true, only ndarrays with equal type can be considered equal. If false, the
 types of the ndarrays being compared is not taken into consideration. Defaults
@@ -94,7 +94,7 @@ write tests like
 	is_pdl( $got, pdl([ 1, 3, 5, 6 ]) );
 
 without having to worry about the type of the ndarray being exactly I<double>
-(which is the default type of the pdl() constructor), set EQUAL_TYPES equal to
+(which is the default type of the pdl() constructor), set I<require_equal_types> equal to
 0.
 
 =back
@@ -103,17 +103,10 @@ without having to worry about the type of the ndarray being exactly I<double>
 
 =head2 import
 
-Custom importer that recognizes configuration options specified at use time, as
+Custom importer that recognizes configuration defaults specified at use time, as
 in
 
-	use Test::PDL -equal_types => 0;
-
-This invocation is equivalent to
-
-	use Test::PDL;
-	Test::PDL::set_options( EQUAL_TYPES => 0 );
-
-but is arguably somewhat nicer.
+	use Test::PDL -require_equal_types => 0;
 
 =head2 _dimensions_match
 
@@ -134,7 +127,10 @@ diagnostics if they don't compare equal.
 
 =for usage # PDL
 
+	is_pdl( $got, $expected );
 	is_pdl( $got, $expected, $test_name );
+	is_pdl( $got, $expected, { test_name => $test_name } );
+	is_pdl( $got, $expected, { atol => $absolute_tolerance, ... } );
 
 Yields ok if the first two arguments are ndarrays that compare equal, not ok if
 the ndarrays are different, or if at least one is not a ndarray. Prints a
@@ -154,7 +150,9 @@ additionally returns a diagnostic string.
 =for usage # PDL
 
 	my $equal = eq_pdl( $got, $expected );
+	my $equal = eq_pdl( $got, $expected, { atol => $absolute_tolerance, ... } );
 	my( $equal, $diag ) = eq_pdl( $got, $expected );
+	my( $equal, $diag ) = eq_pdl( $got, $expected, { atol => $absolute_tolerance, ... } );
 
 eq_pdl() contains just the comparison part of is_pdl(), without the
 infrastructure required to write tests with Test::More. It could be used as
@@ -182,7 +180,7 @@ is no implicit conversion from scalar to ndarray.
 
 =item *
 
-The type of both ndarrays must be equal if (and only if) I<EQUAL_TYPES> is true.
+The type of both ndarrays must be equal if (and only if) I<require_equal_types> is true.
 
 =item *
 
@@ -287,26 +285,6 @@ above example.
 =for Pod::Coverage test_anyval test_byte test_short test_ushort test_long
 test_indx test_longlong test_float test_double test_cfloat test_cdouble
 test_cldouble test_ldouble test_sbyte test_ulong test_ulonglong
-
-=head2 set_options
-
-=for ref # PDL
-
-Configure the comparison carried out by Test::PDL's testing functions.
-
-=for example # PDL
-
-	# e.g., if a tolerance of 1e-6 is too tight
-	Test::PDL::set_options( TOLERANCE => 1e-4 );
-
-The preferred way to set the options to this module. See %OPTIONS for all
-allowed options. set_options() dies with an error if an unknown option is
-passed. Note that sensible default values are provided for all options, so you
-needn't use this routine if you are fine with the defaults.
-
-This function is not exported. Rather, it must be called as
-
-	Test::PDL::set_options( KEY => VALUE, ... );
 
 =head1 BUGS
 
