@@ -26,22 +26,19 @@ test_err( '/#\s+received value is not a ndarray\n(.|\n)*/' );
 is_pdl( $got, $expected );
 test_test( 'rejects non-ndarray arguments' );
 
-Test::PDL::set_options( EQUAL_TYPES => 0 );
 $expected = long( 3,4 );
 $got = pdl( 3,4 );
 test_out( "ok 1 - ndarrays are equal" );
-is_pdl( $got, $expected );
-test_test( 'all else being equal, compares equal on differing types when EQUAL_TYPES is false' );
+is_pdl( $got, $expected, { require_equal_types => 0 } );
+test_test( 'all else being equal, compares equal on differing types when \'require_equal_types\' is false' );
 
-Test::PDL::set_options( EQUAL_TYPES => 1 );
 $expected = long( 3,4 );
 $got = pdl( 3,4 );
 test_out( "not ok 1 - ndarrays are equal" );
 test_fail( +2 );
-test_err( '/#\s+types do not match \(EQUAL_TYPES is true\)\n(.|\n)*/' );
-is_pdl( $got, $expected );
-test_test( 'catches type mismatch, but only when EQUAL_TYPES is true' );
-Test::PDL::set_options( EQUAL_TYPES => 0 );
+test_err( '/#\s+types do not match \([\']require_equal_types[\'] is true\)\n(.|\n)*/' );
+is_pdl( $got, $expected, { require_equal_types => 1 } );
+test_test( 'catches type mismatch, but only when \'require_equal_types\' is true' );
 
 $expected = long( 3 );
 $got = long( 3,4 );
@@ -105,11 +102,10 @@ test_out( "ok 1 - ndarrays are equal" );
 is_pdl( $got, $expected );
 test_test( 'approximate comparison for floating-point data succeeds correctly at documented default tolerance of 1e-6' );
 
-Test::PDL::set_options( TOLERANCE => 1e-2 );
 $expected = pdl( 4,5,6,7,8,9 );
 $got = pdl( 4,5,6,7,8.001,9 );
 test_out( "ok 1 - ndarrays are equal" );
-is_pdl( $got, $expected );
+is_pdl( $got, $expected, { atol => 1e-2 } );
 test_test( 'approximate comparison for floating-point data succeeds correctly at user-specified tolerance of 1e-2' );
 
 $expected = pdl( 0,1,2,3,4 );
@@ -131,7 +127,7 @@ test_fail( +4 );
 test_err( '/#\s+received a non-empty ndarray while expecting an empty one/' );
 test_err( '/#\s+got:.*/' );
 test_err( '/#\s+expected:\s+Null/' );
-is_pdl( $got, $expected );
+is_pdl( $got, $expected, { require_equal_types => 0 } );
 test_test( 'pdl( ... ) != null' );
 
 $expected = pdl( 1,2,3 );
@@ -141,7 +137,7 @@ test_fail( +4 );
 test_err( '/#\s+received an empty ndarray while expecting a non-empty one/' );
 test_err( '/#\s+got:\s+Null/' );
 test_err( '/#\s+expected:.*/' );
-is_pdl( $got, $expected );
+is_pdl( $got, $expected, { require_equal_types => 0 } );
 test_test( 'null != pdl( ... )' );
 
 note 'mixed-type comparisons';
@@ -149,46 +145,40 @@ note 'mixed-type comparisons';
 $expected = double( 0,1,2.001,3,4 );
 $got = long( 0,1,2,3,4 );
 
-Test::PDL::set_options( TOLERANCE => 1e-2 );
 test_out( "ok 1 - ndarrays are equal" );
-is_pdl( $got, $expected );
+is_pdl( $got, $expected, { atol => 1e-2, require_equal_types => 0 } );
 test_test( 'succeeds correctly for long/double' );
 
-Test::PDL::set_options( TOLERANCE => 1e-6 );
 test_out( "not ok 1 - ndarrays are equal" );
 test_fail( +2 );
 test_err( '/#\s+values do not match\n(.|\n)*/' );
-is_pdl( $got, $expected );
+is_pdl( $got, $expected, { atol => 1e-6, require_equal_types => 0 } );
 test_test( 'fails correctly for long/double' );
 
 $expected = short( 0,1,2,3,4 );
 $got = float( 0,1,2.001,3,4 );
 
-Test::PDL::set_options( TOLERANCE => 1e-2 );
 test_out( "ok 1 - ndarrays are equal" );
-is_pdl( $got, $expected );
+is_pdl( $got, $expected, { atol => 1e-2, require_equal_types => 0 } );
 test_test( 'succeeds correctly for float/short' );
 
-Test::PDL::set_options( TOLERANCE => 1e-6 );
 test_out( "not ok 1 - ndarrays are equal" );
 test_fail( +2 );
 test_err( '/#\s+values do not match\n(.|\n)*/' );
-is_pdl( $got, $expected );
+is_pdl( $got, $expected, { atol => 1e-6, require_equal_types => 0 } );
 test_test( 'fails correctly for float/short' );
 
 $expected = float( 0,-1,2.001,3,49999.998 );
 $got = double( 0,-0.9999,1.999,3,49999.999 );
 
-Test::PDL::set_options( TOLERANCE => 1e-2 );
 test_out( "ok 1 - ndarrays are equal" );
-is_pdl( $got, $expected );
+is_pdl( $got, $expected, { atol => 1e-2, require_equal_types => 0 } );
 test_test( 'succeeds correctly for double/float' );
 
-Test::PDL::set_options( TOLERANCE => 1e-6 );
 test_out( "not ok 1 - ndarrays are equal" );
 test_fail( +2 );
 test_err( '/#\s+values do not match\n(.|\n)*/' );
-is_pdl( $got, $expected );
+is_pdl( $got, $expected, { atol => 1e-6, require_equal_types => 0 } );
 test_test( 'fails correctly for double/float' );
 
 note 'miscellaneous';
@@ -199,6 +189,10 @@ test_out( "ok 1 - insert custom test name" );
 is_pdl( $got, $expected, 'insert custom test name' );
 test_test( 'custom test name is displayed correctly' );
 
+test_out( "ok 1 - insert custom test name" );
+is_pdl( $got, $expected, { test_name => 'insert custom test name' } );
+test_test( 'custom test name is also displayed correctly when supplied as an option hash' );
+
 # Although the next test may appear strange, the case it tests can be produced
 # by the following test:
 #	is_pdl hist( pdl(2,3,4,5) ), pdl(1,1,1,1);
@@ -206,7 +200,7 @@ test_test( 'custom test name is displayed correctly' );
 # as the third argument. Since this is probably not what the user intended, an
 # error is raised.
 throws_ok { is_pdl( $got, $expected, pdl(1,1,1,1) ) }
-	qr/^error in arguments: test name is a ndarray at /, 'test name is a ndarray';
+	qr/^error in arguments: third argument is a ndarray at /, 'third argument is a ndarray';
 
 $expected = long( 4,5,6,7,8,9 );
 $expected->badflag( 1 );
@@ -215,19 +209,6 @@ $got->badflag( 0 );
 test_out( "ok 1 - ndarrays are equal" );
 is_pdl( $got, $expected );
 test_test( "isn't fooled by differing badflags" );
-
-note 'setting options';
-
-throws_ok { Test::PDL::set_options( SOME_INVALID_OPTION => 1 ) }
-	qr/invalid option SOME_INVALID_OPTION\b/, 'does not accept unknown options';
-throws_ok { Test::PDL::set_options( 'TOLERANCE' ) }
-	qr/undefined value for TOLERANCE/, 'refuses options without a value';
-lives_ok { Test::PDL::set_options(
-			TOLERANCE => 1e-4,
-			EQUAL_TYPES => 2 )
-	} 'accepts two options at the same time';
-is( $Test::PDL::OPTIONS{TOLERANCE}, 1e-4, 'TOLERANCE set correctly' );
-is( $Test::PDL::OPTIONS{EQUAL_TYPES}, 2, 'EQUAL_TYPES set correctly' );
 
 is "@warns", "", "no warnings";
 done_testing;
